# llama-factory-demo

./: .gitignore  pyproject.toml  requirements.txt
data/: dataset_info.json
data/formatting/: input.html  target.json
data/image_classification/: test.json
demo/: create_formmating_dataset.py  create_image_classification_dataset.py  formatting.ipynb  formatting.yaml  image_classification.ipynb  image_classification.yaml
